--- a/wesalvatare/templates/registration/signup.html
+++ b/wesalvatare/templates/registration/signup.html
@@ -1,5 +1,5 @@
-<!-- templates/registration/signup.html -->
 {% extends 'rescue/base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -39,6 +39,17 @@
                         {% endif %}
                     </div>
 
+                    <!-- Mobile Number field -->
+                    <div class="mb-3">
+                        <label for="mobile_number" class="form-label">Mobile Number</label>
+                        <input type="text" name="mobile_number" class="form-control" required id="mobile_number">
+                        {% if form.mobile_number.errors %}
+                            <div class="text-danger">
+                                {{ form.mobile_number.errors }}
+                            </div>
+                        {% endif %}
+                    </div>
+
                     <!-- Password field -->
                     <div class="mb-3">
                         <label for="password1" class="form-label">Password</label>
@@ -62,13 +73,14 @@
                     </div>
 
                     <!-- User type field -->
-                    <div class="mb-3">
+                    <div class="mb-3 position-relative">
                         <label for="user_type" class="form-label">User type</label>
                         <select name="user_type" class="form-control" required id="user_type">
-                            <option value="USER">Regular User</option>
-                            <option value="VOLUNTEER">Volunteer</option>
-                            <option value="ADMIN">Administrator</option>
+                            <option value="USER" title="Regular User: Can browse and adopt animals.">Regular User</option>
+                            <option value="VOLUNTEER" title="Volunteer: Can assist in animal rescue operations.">Volunteer</option>
+                            <option value="ADMIN" title="Administrator: Has full access to manage the system.">Administrator</option>
                         </select>
+                        <i class="fas fa-chevron-down position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);"></i>
                         {% if form.user_type.errors %}
                             <div class="text-danger">
                                 {{ form.user_type.errors }}
