--- a/rescue/templates/rescue/user_dashboard.html
+++ b/rescue/templates/rescue/user_dashboard.html
@@ -5,6 +5,7 @@
    <!-- Add Bootstrap and Font Awesome CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
    <link rel="stylesheet" href="{% static 'rescue/css/style.css' %}">
 {% endblock %}
 
@@ -67,5 +68,6 @@
 {% block additional_js %}
    <!-- Add Bootstrap JS -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
+   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
    <script src="{% static 'rescue/js/user_dashboard.js' %}" defer></script>
 {% endblock %}
