--- a/rescue/templates/rescue/donation_list.html
+++ b/rescue/templates/rescue/donation_list.html
@@ -1,4 +1,5 @@
 {% extends 'rescue/base.html' %}
+
 {% block content %}
 <div class="container mt-5">
    <h2>Donation List</h2>
@@ -8,6 +9,8 @@
                <th>User</th>
                <th>Amount</th>
                <th>Date</th>
+               <th>NGO</th>
+               <th>Action</th>  <!-- New column for actions -->
            </tr>
        </thead>
        <tbody>
@@ -16,10 +19,14 @@
                <td>{{ donation.user.get_full_name|default:donation.user.username }}</td>
                <td>${{ donation.amount }}</td>
                <td>{{ donation.date|date:"Y-m-d H:i" }}</td>
+               <td>{{ donation.ngo.name }}</td>  <!-- Display the NGO name -->
+               <td>
+                   <a href="{% url 'donate_to_ngo' donation.ngo.id %}" class="btn btn-primary">Donate</a>  <!-- Donate button -->
+               </td>
            </tr>
            {% empty %}
            <tr>
-               <td colspan="3" class="text-center">No donations available.</td>
+               <td colspan="5" class="text-center">No donations available.</td>
            </tr>
            {% endfor %}
        </tbody>
