--- a/rescue/templates/rescue/donations.html
+++ b/rescue/templates/rescue/donations.html
@@ -1,17 +1,31 @@
 {% extends 'rescue/base.html' %}
-{% load static %}
 
 {% block content %}
-<div class="container mt-4">
-    <h2>Recent Donations</h2>
-    <ul class="list-group">
-        {% for donation in donations %}
-            <li class="list-group-item">
-                <strong>{{ donation.user.username }}</strong> donated <strong>{{ donation.amount }}</strong> on {{ donation.date }}
-            </li>
-        {% empty %}
-            <li class="list-group-item">No donations found.</li>
-        {% endfor %}
-    </ul>
+<div class="container mt-5">
+   <h2>Donation List</h2>
+   <table class="table table-striped">
+       <thead>
+           <tr>
+               <th>User</th>
+               <th>Amount</th>
+               <th>Date</th>
+               <th>NGO</th>
+           </tr>
+       </thead>
+       <tbody>
+           {% for donation in donations %}
+           <tr>
+               <td>{{ donation.user.get_full_name|default:donation.user.username }}</td>
+               <td>${{ donation.amount }}</td>
+               <td>{{ donation.date|date:"Y-m-d H:i" }}</td>
+               <td>{{ donation.ngo.name }}</td>  <!-- Display the NGO name -->
+           </tr>
+           {% empty %}
+           <tr>
+               <td colspan="4" class="text-center">No donations available.</td>
+           </tr>
+           {% endfor %}
+       </tbody>
+   </table>
 </div>
 {% endblock %}
