--- a/templates/rescue/base.html
+++ b/templates/rescue/base.html
@@ -11,10 +11,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'rescue/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
     <!-- Favicon -->
-    <link rel="icon" href="{% static 'rescue/images/favicon.ico' %}" type="image/x-icon">  <!-- Add this line -->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">  <!-- Add this line -->
     
 </head>
 <body>
@@ -140,7 +140,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JavaScript -->
-    <script src="{% static 'rescue/js/alert.js' %}" defer></script> <!-- Include the new alert.js -->
+    <script src="{% static 'js/alert.js' %}" defer></script> <!-- Include the new alert.js -->
 
     {% block additional_js %}
     {% endblock %}
