--- a/templates/rescue/user_dashboard.html
+++ b/templates/rescue/user_dashboard.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-   <link rel="stylesheet" href="{% static 'rescue/css/style.css' %}">
+   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -69,5 +69,5 @@
    <!-- Add Bootstrap JS -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-   <script src="{% static 'rescue/js/user_dashboard.js' %}" defer></script>
+   <script src="{% static 'js/user_dashboard.js' %}" defer></script>
 {% endblock %}
