--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,9 +1,8 @@
-<!-- templates/registration/password_reset_email.html -->
 {% autoescape off %}
 Hi {{ email }},
 You requested a password reset. Click the link below to reset your password:
 
-http://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ BASE_URL }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
 Thank you!
 {% endautoescape %}
