--- a/templates/rescue/base.html
+++ b/templates/rescue/base.html
@@ -70,6 +70,13 @@
                                 Total Animals Rescued Today: {{ total_rescued_today }}
                             </a>  <!-- Updated link -->
                         </li>
+                        <!-- New 'Get Premium' link -->
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'subscription_plans' %}active{% endif %}" 
+                                href="{% url 'subscription_plans' %}">
+                                <i class="fas fa-crown me-1"></i> Get Premium
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
